--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "ecommerce",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@stripe/stripe-js": "^2.1.0",
-    "autoprefixer": "10.4.15",
-    "bcryptjs": "^2.4.3",
-    "firebase": "^10.3.0",
-    "joi": "^17.9.2",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.4",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3",
-    "stripe": "^13.3.0",
-    "tailwindcss": "3.3.3"
-  }
+   "name": "ecommerce",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@headlessui/react": "^1.7.17",
+      "@stripe/stripe-js": "^2.1.0",
+      "autoprefixer": "10.4.15",
+      "bcryptjs": "^2.4.3",
+      "encoding": "^0.1.13",
+      "firebase": "^10.3.0",
+      "joi": "^17.9.2",
+      "js-cookie": "^3.0.5",
+      "jsonwebtoken": "^9.0.1",
+      "mongoose": "^7.4.4",
+      "next": "13.4.19",
+      "node-fetch": "^3.3.2",
+      "postcss": "8.4.28",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "react-spinners": "^0.13.8",
+      "react-toastify": "^9.1.3",
+      "stripe": "^13.3.0",
+      "tailwindcss": "3.3.3"
+   }
 }
